Fixed compilation issues.

--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -2778,6 +2778,11 @@ am__tar='$${TAR-tar} chof - "$$tardir"' am__untar='$${TAR-tar} xf -'
 
 
 
+CXX='g++-4.8'
+CPPFLAGS='-I${top_srcdir}'
+CXXFLAGS='-std=c++11'
+CFLAGS=''
+
 # Checks for programs.
 ac_ext=cpp
 ac_cpp='$CXXCPP $CPPFLAGS'
