Got autotools make working.

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -814,11 +814,12 @@ m4trace:configure.ac:35: -1- m4_pattern_allow([^HAVE_MMAP$])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^HAVE_DECL_STRERROR_R$])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^HAVE_STRERROR_R$])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^STRERROR_R_CHAR_P$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:44: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:45: -1- m4_pattern_allow([^subdirs$])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:47: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:47: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
