--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -541,30 +541,35 @@ m4trace:configure.ac:37: -1- AH_OUTPUT([HAVE_STRTOULL], [/* Define to 1 if you h
 m4trace:configure.ac:39: -1- AC_CONFIG_FILES([Makefile
                  back_end/Makefile
                  back_end/memory/Makefile
-                 back_end/opcode_executor/Makefile])
-m4trace:configure.ac:44: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:44: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:44: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:44: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([MKDIR_P])
+                 back_end/opcode_executor/Makefile
+                 test_harness/Makefile])
+m4trace:configure.ac:45: -1- AC_CONFIG_SUBDIRS([third_party/gtest])
+m4trace:configure.ac:45: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([third_party/gtest])"])
+m4trace:configure.ac:45: -1- AC_SUBST_TRACE([subdirs])
+m4trace:configure.ac:45: -1- m4_pattern_allow([^subdirs$])
+m4trace:configure.ac:47: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:47: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:47: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:47: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:47: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([MKDIR_P])
