--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -2784,6 +2784,7 @@ am__tar='$${TAR-tar} chof - "$$tardir"' am__untar='$${TAR-tar} xf -'
 CPPFLAGS='-I${top_srcdir} -I${top_srcdir}/third_party/gtest/include'
 CXXFLAGS='-std=c++11'
 CFLAGS=''
+#LDFLAGS='-lc++ -libstdc++ -libc++'
 
 # Checks for programs.
 ac_ext=cpp
@@ -2796,7 +2797,7 @@ if test -z "$CXX"; then
     CXX=$CCC
   else
     if test -n "$ac_tool_prefix"; then
-  for ac_prog in g++-4.8 clang
+  for ac_prog in g++-4.8 g++
   do
     # Extract the first word of "$ac_tool_prefix$ac_prog", so it can be a program name with args.
 set dummy $ac_tool_prefix$ac_prog; ac_word=$2
@@ -2840,7 +2841,7 @@ fi
 fi
 if test -z "$CXX"; then
   ac_ct_CXX=$CXX
-  for ac_prog in g++-4.8 clang
+  for ac_prog in g++-4.8 g++
 do
   # Extract the first word of "$ac_prog", so it can be a program name with args.
 set dummy $ac_prog; ac_word=$2
